[tool.poetry]
name = "course5"
version = "0.1.0"
description = ""
authors = ["polinaKl2101 <pklopunova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.30.0"
urllib3 = "1.26.6"
psycopg2 = "^2.9.6"
pandas = "^2.0.1"
sqlalchemy = "^2.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

